--- a/week-3/my-berkshire-site.html
+++ b/week-3/my-berkshire-site.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<!-- Eddie and Alex 1-11-16 -->
+<!-- Eddie and Chris -->
 <head>
   <link rel="stylesheet" type="text/css" href="stylesheets/my-berkshire-stylesheet.css">
   <title>Berkshire site clone</title>
@@ -68,24 +68,3 @@ Copyright © 1978-2015 Berkshire Hathaway Inc.
 </body>
 
 </html>
-
-<!-- - What was it like to translate your previous learning with HTML into an actual site?
-It was fun and challenging. A lot of mistakes but it was doable.
-- How was it researching and using semantic HTML5 elements?
-I had to research everything just to remember what I was doing and what I needed to do.
-- How did you do at keeping to best practices (i.e. no formatting in the HTML)
-I think I had poor formatting. I didn't really have proper spacing. I had it so that I was able to read it.
-- What seems good and bad about HTML?
-What's good is that it is easy to see all the format and everything. The bad thing is if you don't know what a tag does you have to look it up.
-- What tricks do you have for remembering how to write HTML?
-I haven't really come up any tricks just trying to work at it
-
--->
-
-
-
-
-
-
-
-
